ingress/deployments_servico04.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  
  template:
    metadata:
      labels:
        app: app1
    spec:
     containers:
     - name: app1
       image: dockersamples/static-site
       ports:
       - containerPort: 80
