ingress/svc-default-backend-ingress.yaml
apiVersion: v1
kind: Service
  metadata:
    name: default-backend
    namespace: ingress
    spec:
      ports:
      - port: 8080
        protocol: TCP
        targetPort: 8080
      selector:
        app: default-backend
