ingress/svc-servico05.yaml
kind: Service
apiVersion: v1
metadata:
  name:  svcapp2
spec:
  selector:
    app:  app2
  ports:
  - name:  http-port-svcapp2
    port:  80
    targetPort:  80
    protocol: TCP
